# wayfound

./: .env.example  .gitignore  LICENSE  README.MD  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  001_pgvector_extension.py  002_user_table.py  003_trip_tool_call_chunks_tables.py  004_trip_status_failure_reason.py  005_chunks_embedding_384.py
backend/app/: __init__.py  main.py
backend/app/agents/: callbacks.py  graph.py  nodes.py  prompts.py  state.py
backend/app/core/: __init__.py  embeddings.py  logging.py  pricing.py  security.py  settings.py
backend/app/db/: __init__.py  base.py  engine.py
backend/app/models/: __init__.py  tool_call.py  trip.py  user.py
backend/app/routes/: __init__.py  auth.py  health.py  trips.py  users.py
backend/app/schemas/: __init__.py  auth.py  trips.py  user.py
backend/app/services/: __init__.py  agent.py  auth.py
backend/app/tools/: __init__.py  classifier.py  fx.py  rag.py  tracker.py  weather.py
backend/app/webhooks/: discord.py
backend/rag/: db.py  fetch_wikivoyage.py  ingest.py  models.py  retrieval.py  test_retrieval.py
backend/tests/: conftest.py  test_schemas.py  test_tools_isolation.py
data/: destinations.csv
data/raw/: economic_features_simulated.csv
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
ml-notebook/: pyproject.toml  train.ipynb  train_executed.ipynb
models/: travel_classifier.joblib
results/: results.csv
(+23 files in other folders)
