[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pgvector>=0.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "openai>=1.30",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "alembic>=1.13",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",  # pin: passlib 1.7.4 incompatible with bcrypt>=4.1 (P-03 — __about__ removed)
    "pydantic-settings>=2.4",
    "email-validator>=2.2",
    "joblib>=1.4",  # for lifespan ML classifier load (Wave 3)
    "langgraph>=1.1,<2",
    "langchain-groq>=1.1,<2",
    "langchain-core>=1.3,<2",
    "tenacity>=9.1,<10",
    "cachetools>=7.0,<8",
    "pandas>=2.0",
    "langsmith>=0.7",
    "scikit-learn==1.4.2",
    "sentence-transformers>=5.4.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
