[project]
name = "ml-notebook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # pinned <1.5 per ML-05: prevents joblib version mismatch when backend loads the model
    "scikit-learn>=1.4,<1.5",
    "pandas>=2.0",
    "numpy>=1.26",
    "joblib>=1.3",
    "imbalanced-learn>=0.12",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]
